<resources>
    <string name="app_name">AppFolio</string>
    <string name="udacity_nanodegree_apps">Udacity Nanodegree Apps</string>
    <string name="popular_movies">Popular Movies</string>
    <string name="stock_hawk">Stock Hawk</string>
    <string name="build_it_bigger">Build it Bigger</string>
    <string name="make_your_app_material">Make Your App Material</string>
    <string name="go_ubiquitous">Go Ubiquitous</string>
    <string name="capstone_my_own_app">Capstone: My Own App</string>
</resources>
