<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorPrimaryDark"
    tools:context="com.gavin.example.appfolio.MainActivity">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/udacity_nanodegree_apps"
        android:layout_marginBottom="@dimen/title_margin_bottom"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textAlignment="center" />

    <Button
        android:text="@string/popular_movies"
        style="@style/Buttontheme"
        android:layout_height="wrap_content"
        android:layout_below="@+id/titleTextView"
        android:id="@+id/button_app1"
        android:onClick="launchApp" />

    <Button
        android:text="@string/stock_hawk"
        style="@style/Buttontheme"
        android:layout_below="@+id/button_app1"
        android:id="@+id/button_app2"
        android:onClick="launchApp" />

    <Button
        android:text="@string/build_it_bigger"
        style="@style/Buttontheme"
        android:layout_below="@+id/button_app2"
        android:id="@+id/button_app3"
        android:onClick="launchApp" />

    <Button
        android:text="@string/make_your_app_material"
        style="@style/Buttontheme"
        android:layout_below="@+id/button_app3"
        android:id="@+id/button_app4"
        android:onClick="launchApp" />

    <Button
        android:text="@string/go_ubiquitous"
        style="@style/Buttontheme"
        android:layout_below="@+id/button_app4"
        android:id="@+id/button_app5"
        android:onClick="launchApp" />

    <Button
        android:text="@string/capstone_my_own_app"
        style="@style/Buttontheme"
        android:layout_below="@+id/button_app5"
        android:id="@+id/button_app6"
        android:background="@color/colorAccent"
        android:onClick="launchApp" />
</RelativeLayout>
